fix here and there xd

--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
             </div>
 
             <div class="option">
-                <ul>
-                <div>
-                    <li>Option 1</li>
-                    <li>Option 2</li>
+
+                <h1><img src="img/icons/knives.png" alt="">Choose An option!</h1>
+                <div class="option-push">
+                    <button>Charmander</button>
+                    <button>Pikachu</button>
                 </div>
                 <div>
-                    <li>Option 3</li>
-                    <li>Option 4</li>
+                    <button>Kangaskhan</button>
+                    <button>Charizard</button>
                 </div>
-                </ul>
+
             </div>
+            
         </article>
 
     </div>
