FIX HERE AND THERE

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;900&display=swap" rel="stylesheet">
     <title>Pokemon TRY!</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <div>
                     <p class="header-paragraph"><img class="icon1" src="img/icons/avatar.png" alt="">Who's That Pokémon?</p>
 
-                    <p class="header-paragraph"><img class="icon1" src="img/icons/life.png" alt=""><span class="hp">HP</span><span>120</span></p>
+                    <p class="header-paragraph"><img class="icon2" src="img/icons/life.png" alt=""><span class="hp">HP</span><span>120</span></p>
                     
                 </div>        
             </section>
